club: fix setting `clubs_stats_min_members`, should beginn with module name

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -17,6 +17,6 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
-[club_stats_min_members]
+[clubs_stats_min_members]
 description = "Minimum number of members to show statistics in club data"
 type = int
