settings: update list of file endings which result in immediate 404 (no search for clubs)

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -37,3 +37,9 @@ default[] = rar
 default[] = sql
 default[] = swp
 default[] = zip
+default[] = dll
+default[] = war
+default[] = backup
+default[] = 7z
+default[] = tar
+default[] = jar
