club: add setting `clubs_unwanted_path_beginnings`, do not lookup these, too

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -22,7 +22,7 @@ description = "Minimum number of members to show statistics in club data"
 type = int
 
 [clubs_unwanted_file_endings]
-description = "list of URL endings that point to files, nothing someone would ever really search for, so return with 404 immediately"
+description = "list of URL endings that point to files, nothing someone would ever really search for, so return immediately with 404"
 type = list
 default[] = asp
 default[] = bak
@@ -44,3 +44,11 @@ default[] = 7z
 default[] = tar
 default[] = jar
 default[] = env
+default[] = shtml
+
+[clubs_unwanted_path_beginnings]
+description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
+default[] = /__
+default[] = /server-status
+default[] = /nmaplowercheck
+default[] = /HNAP1
