--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/clubs
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2023 Gustaf Mossakowski
+; @copyright Copyright © 2023-2024 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -16,6 +16,10 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+
+[clubs_confederation_contact_id]
+description = "contact_id of top federation contact"
+type = int
 
 [clubs_stats_min_members]
 description = "Minimum number of members to show statistics in club data"
