clubsgeojson: read .geojson URL from webpages table, use `clubs_geojson_path`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -21,6 +21,11 @@
 description = "contact_id of top federation contact"
 type = int
 
+[clubs_geojson_path]
+description = "path to GeoJSON URL"
+type = path
+brick = "request clubsgeojson *"
+
 [clubs_stats_min_members]
 description = "Minimum number of members to show statistics in club data"
 type = int
