clubs: add map filters for members, members U25, female members + layout

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -26,6 +26,11 @@ description = "path to GeoJSON URL"
 type = path
 brick = "request clubsgeojson *"
 
+[clubs_map_filter_steps]
+description = "for member filters, set steps for range input"
+type = int
+default = 5
+
 [clubs_stats_min_members]
 description = "Minimum number of members to show statistics in club data"
 type = int
