add path `clubs_edit`; extract session and cache checks from club request to mf_clubs_editform(), redirect to clubs_edit path

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -15,6 +15,10 @@
 ; - Field "group": default group name who hasthis right
 ;
 
+[clubs_edit]
+description = "publicly edit contact data"
+group = public
+
 [clubs_geojson]
 description = "GeoJSON URL"
 group = public
