--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -21,6 +21,11 @@
 description = "contact_id of top federation contact"
 type = int
 
+[clubs_edit_path]
+description = "path to publicly edit contact data"
+type = path
+brick = "request club * edit=1"
+
 [clubs_geojson_path]
 description = "path to GeoJSON URL"
 type = path
