club, settings: remove further URLs from Nominatim checks because they are bots trying to find security leaks

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -48,6 +48,7 @@ default[] = bak
 default[] = bz2
 default[] = cgi
 default[] = gz
+default[] = htm
 default[] = html
 default[] = json
 default[] = old
@@ -64,6 +65,9 @@ default[] = tar
 default[] = jar
 default[] = env
 default[] = shtml
+default[] = do
+default[] = lua
+default[] = tmp
 
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
