update extensions that are ignored

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -44,6 +44,7 @@ type = int
 description = "list of URL endings that point to files, nothing someone would ever really search for, so return immediately with 404"
 type = list
 default[] = asp
+default[] = aspx
 default[] = bak
 default[] = bz2
 default[] = cgi
@@ -68,6 +69,8 @@ default[] = shtml
 default[] = do
 default[] = lua
 default[] = tmp
+default[] = well-known
+;default[] = png
 
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
