settings, clubs: add further URLs when to return 404 early, do not call Nominatim if IP address was spoofed, saving ressources

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -48,12 +48,18 @@ default[] = aspx
 default[] = bak
 default[] = bz2
 default[] = cgi
+default[] = config
 default[] = gz
 default[] = htm
 default[] = html
+default[] = js
 default[] = json
+default[] = local
 default[] = old
 default[] = php
+default[] = php4
+default[] = php7
+default[] = production
 default[] = rar
 default[] = sql
 default[] = swp
@@ -78,3 +84,9 @@ default[] = /__
 default[] = /server-status
 default[] = /nmaplowercheck
 default[] = /HNAP1
+default[] = /apple-touch-icon
+default[] = /live_env
+default[] = /.env
+default[] = /.phpinfo
+default[] = /.git
+default[] = /.well-known
