settings: add to list of unwanted URLs

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -76,17 +76,22 @@ default[] = do
 default[] = lua
 default[] = tmp
 default[] = well-known
+default[] = txt
 ;default[] = png
 
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
 default[] = /__
-default[] = /server-status
-default[] = /nmaplowercheck
-default[] = /HNAP1
-default[] = /apple-touch-icon
-default[] = /live_env
 default[] = /.env
-default[] = /.phpinfo
 default[] = /.git
+default[] = /.phpinfo
 default[] = /.well-known
+default[] = /api-description
+default[] = /apple-touch-icon
+default[] = /HNAP1
+default[] = /kylin
+default[] = /live_env
+default[] = /nmaplowercheck
+default[] = /owa
+default[] = /server-status
+default[] = /webui
