settings: add further paths that are just dumb script kiddies searching for configuration files etc.

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -43,40 +43,45 @@ type = int
 [clubs_unwanted_file_endings]
 description = "list of URL endings that point to files, nothing someone would ever really search for, so return immediately with 404"
 type = list
+default[] = 7z
 default[] = asp
 default[] = aspx
+default[] = backup
 default[] = bak
 default[] = bz2
 default[] = cgi
 default[] = config
+default[] = dll
+default[] = do
+default[] = dockerenv
+default[] = dockerignore
+default[] = env
 default[] = gz
 default[] = htm
 default[] = html
+default[] = jar
 default[] = js
 default[] = json
 default[] = local
+default[] = log
+default[] = lua
 default[] = old
 default[] = php
 default[] = php4
 default[] = php7
 default[] = production
 default[] = rar
+default[] = shtml
 default[] = sql
 default[] = swp
-default[] = zip
-default[] = dll
-default[] = war
-default[] = backup
-default[] = 7z
 default[] = tar
-default[] = jar
-default[] = env
-default[] = shtml
-default[] = do
-default[] = lua
 default[] = tmp
-default[] = well-known
 default[] = txt
+default[] = war
+default[] = well-known
+default[] = yaml
+default[] = yml
+default[] = zip
 ;default[] = png
 
 [clubs_unwanted_path_beginnings]
@@ -88,10 +93,12 @@ default[] = /.phpinfo
 default[] = /.well-known
 default[] = /api-description
 default[] = /apple-touch-icon
+default[] = /Dockerfile
 default[] = /HNAP1
 default[] = /kylin
 default[] = /live_env
 default[] = /nmaplowercheck
 default[] = /owa
 default[] = /server-status
+default[] = /Thumbs.db
 default[] = /webui
