settings: add further paths that are just dumb script kiddies searching for configuration files etc.

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -71,6 +71,8 @@ default[] = php4
 default[] = php7
 default[] = production
 default[] = rar
+default[] = sample
+default[] = save
 default[] = shtml
 default[] = sql
 default[] = swp
@@ -88,6 +90,8 @@ default[] = zip
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
 default[] = /__
 default[] = /.env
+default[] = /.env.1
+default[] = /.env.remote
 default[] = /.git
 default[] = /.phpinfo
 default[] = /.well-known
@@ -99,6 +103,7 @@ default[] = /kylin
 default[] = /live_env
 default[] = /nmaplowercheck
 default[] = /owa
+default[] = /phpinfo
 default[] = /server-status
 default[] = /Thumbs.db
 default[] = /webui
