settings: add further paths that are just dumb script kiddies searching for configuration files etc.

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -52,6 +52,7 @@ default[] = bz2
 default[] = cgi
 default[] = config
 default[] = dll
+default[] = dev
 default[] = do
 default[] = dockerenv
 default[] = dockerignore
@@ -63,24 +64,33 @@ default[] = jar
 default[] = js
 default[] = json
 default[] = local
+default[] = lock
 default[] = log
 default[] = lua
 default[] = old
 default[] = php
 default[] = php4
 default[] = php7
+default[] = prod
 default[] = production
+default[] = properties
 default[] = rar
+default[] = rb
+default[] = ru
 default[] = sample
 default[] = save
 default[] = shtml
 default[] = sql
 default[] = swp
 default[] = tar
+default[] = tf
+default[] = tfvars
 default[] = tmp
+default[] = toml
 default[] = txt
 default[] = war
 default[] = well-known
+default[] = xml
 default[] = yaml
 default[] = yml
 default[] = zip
@@ -89,21 +99,26 @@ default[] = zip
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
 default[] = /__
+default[] = /.credentials
 default[] = /.env
 default[] = /.env.1
 default[] = /.env.remote
 default[] = /.git
+default[] = /.keys
 default[] = /.phpinfo
+default[] = /.secrets
 default[] = /.well-known
 default[] = /api-description
 default[] = /apple-touch-icon
 default[] = /Dockerfile
 default[] = /HNAP1
+default[] = /Jenkinsfile
 default[] = /kylin
 default[] = /live_env
 default[] = /nmaplowercheck
 default[] = /owa
 default[] = /phpinfo
+default[] = /Procfile
 default[] = /server-status
 default[] = /Thumbs.db
 default[] = /webui
