settings: add further paths that are just dumb script kiddies searching for configuration files etc.

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -44,15 +44,30 @@ type = int
 description = "list of URL endings that point to files, nothing someone would ever really search for, so return immediately with 404"
 type = list
 default[] = 7z
+default[] = alpha
 default[] = asp
 default[] = aspx
+default[] = back
 default[] = backup
+default[] = backup1
+default[] = backup2
+default[] = backup3
 default[] = bak
+default[] = bak1
+default[] = bak2
+default[] = bak3
+default[] = beta
 default[] = bz2
+default[] = cfg
 default[] = cgi
+default[] = conf
 default[] = config
+default[] = dart
 default[] = dll
+default[] = demo
 default[] = dev
+default[] = develop
+default[] = dist
 default[] = do
 default[] = dockerenv
 default[] = dockerignore
@@ -60,29 +75,42 @@ default[] = env
 default[] = gz
 default[] = htm
 default[] = html
+default[] = ini
 default[] = jar
 default[] = js
 default[] = json
+default[] = live
 default[] = local
 default[] = lock
 default[] = log
 default[] = lua
 default[] = old
+default[] = orig
 default[] = php
 default[] = php4
 default[] = php7
+default[] = pl
 default[] = prod
 default[] = production
 default[] = properties
+default[] = qa
 default[] = rar
 default[] = rb
+default[] = rc
 default[] = ru
 default[] = sample
 default[] = save
+default[] = saved
 default[] = shtml
+default[] = stage
+default[] = staging
 default[] = sql
+default[] = swo
 default[] = swp
 default[] = tar
+default[] = template
+default[] = test
+default[] = testing
 default[] = tf
 default[] = tfvars
 default[] = tmp
@@ -98,11 +126,21 @@ default[] = zip
 
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
+default[] = /_env
 default[] = /__
+default[] = /__env
 default[] = /.credentials
 default[] = /.env
 default[] = /.env.1
+default[] = /.env.2022
+default[] = /.env.2023
+default[] = /.env.2024
+default[] = /.env.2025
+default[] = /.env.original
+default[] = /.env.preprod
 default[] = /.env.remote
+default[] = /.env.uat
+default[] = /.env-backup
 default[] = /.git
 default[] = /.keys
 default[] = /.phpinfo
@@ -111,6 +149,7 @@ default[] = /.well-known
 default[] = /api-description
 default[] = /apple-touch-icon
 default[] = /Dockerfile
+default[] = /env
 default[] = /HNAP1
 default[] = /Jenkinsfile
 default[] = /kylin
