settings: add further paths that are just dumb script kiddies searching for configuration files etc.

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -126,11 +126,12 @@ default[] = zip
 
 [clubs_unwanted_path_beginnings]
 description = "list of the beginning of URL paths that nobody searchs for, so return immediately with 404"
-default[] = /_env
 default[] = /__
 default[] = /__env
+default[] = /_env
 default[] = /.credentials
 default[] = /.env
+default[] = /.env-backup
 default[] = /.env.1
 default[] = /.env.2022
 default[] = /.env.2023
@@ -140,7 +141,6 @@ default[] = /.env.original
 default[] = /.env.preprod
 default[] = /.env.remote
 default[] = /.env.uat
-default[] = /.env-backup
 default[] = /.git
 default[] = /.keys
 default[] = /.phpinfo
@@ -154,6 +154,7 @@ default[] = /HNAP1
 default[] = /Jenkinsfile
 default[] = /kylin
 default[] = /live_env
+default[] = /new/
 default[] = /nmaplowercheck
 default[] = /owa
 default[] = /phpinfo
@@ -161,3 +162,5 @@ default[] = /Procfile
 default[] = /server-status
 default[] = /Thumbs.db
 default[] = /webui
+default[] = /wp/
+default[] = /ip
